# LearnLocal

./: .env.example  .gitignore  .vercelignore  ARCHITECTURE.md  Dockerfile  KAMATERA_DEPLOYMENT.md  README-VERCEL.md  README.md  SETUP.md  agent_functions.md  agentic_ai_journey..md  docker-entrypoint.sh  main.py  manage_server.sh  pyproject.toml  requirements-vercel.txt  requirements.txt  user_journey.md  vercel.json
api/: index.py
src/learnerexpert/: main.py
src/learnerexpert/agents/: __init__.py  graph.py  states.py
src/learnerexpert/agents/nodes/: __init__.py  content_enricher.py  curriculum_validator.py  feedback_evaluator.py  memory.py  orchestrator.py  quiz_creator.py
src/learnerexpert/agents/tools/: __init__.py
src/learnerexpert/api/: __init__.py
src/learnerexpert/api/endpoints/: offline_endpoints.py
src/learnerexpert/config/: settings.py
src/learnerexpert/database/: database.py  models.py
src/learnerexpert/llm/: __init__.py  client.py  offline_model_manager.py  ollama_client.py
src/learnerexpert/memory/: __init__.py
src/learnerexpert/processors/: __init__.py
src/learnerexpert/services/: __init__.py  database_service.py  tts_service.py  unified_llm_service.py
src/learnlocal/: __init__.py  main.py  prompts.py
src/learnlocal/agents/: graph.py
src/learnlocal/agents/nodes/: content_enricher.py  curriculum_validator.py  feedback_evaluator.py  memory.py  orchestrator.py  quiz_creator.py
src/learnlocal/api/: __init__.py
src/learnlocal/api/endpoints/: __init__.py  offline_endpoints.py
src/learnlocal/config/: __init__.py  settings.py
src/learnlocal/database/: __init__.py  database.py
src/learnlocal/generators/: __init__.py
src/learnlocal/llm/: client.py  offline_model_manager.py  ollama_client.py
src/learnlocal/services/: offline_llm_service.py
src/learnlocal/utils/: __init__.py
tests/: __init__.py  conftest.py  test_offline_endpoints.py
