[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learnerexpert"
version = "0.1.0"
description = "AI-powered multi-agent L&D system for curriculum validation, quiz generation, and content enrichment"
authors = [
    {name = "LearnerExpert Team", email = "team@enable.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12,<3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    # FastAPI and server
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    
    # LangChain and LangGraph
    "langchain>=0.1.0",
    "langchain-core>=0.1.0", 
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.20",
    "langgraph-checkpoint-sqlite>=1.0.0",
    
    # OpenAI
    "openai>=1.0.0",
    
    # Pydantic for data validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Document processing
    "pypdf>=3.0.0",
    "python-docx>=0.8.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    
    # File handling and utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    
    # Output generation
    "reportlab>=4.0.0",
    "jinja2>=3.1.0",
    "markdown>=3.5.0",
    
    # Voice processing (optional)
    "openai-whisper>=20230314",
    "SpeechRecognition>=3.10.0",
    
    # Web UI (optional)
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.5.0",
]
ui = [
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
    "plotly>=5.17.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.24.0",
]
all = ["learnerexpert[dev,ui,docs]"]

[project.urls]
Homepage = "https://github.com/learnerexpert/learnerexpert"
Documentation = "https://learnerexpert.readthedocs.io"
Repository = "https://github.com/learnerexpert/learnerexpert.git"
Issues = "https://github.com/learnerexpert/learnerexpert/issues"

[project.scripts]
learnerexpert = "learnerexpert.api.app:main"
learnerexpert-ui = "learnerexpert.demo.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/learnerexpert"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (may take several minutes)"
]

[tool.coverage.run]
source = ["src/learnerexpert"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "streamlit.*",
    "gradio.*",
    "reportlab.*",
    "pypdf.*",
    "docx.*",
]
ignore_missing_imports = true